# triangle-surface-vectorizer

./: CMakeLists.txt  LICENSE  README.md  reference_renderer.cpp
LICENSES/: LICENSE.txt  third_party_licenses.txt
apps/pipeline_battle_test/: main.cpp
include/svec/core/: types.h
include/svec/edge/: edge_map.h
include/svec/error/: error_estimator.h  hierarchical_surface_error.h
include/svec/image/: image.h  image_io.h  integral_map.h  oklab_convert.h  scanline_integral_stats.h
include/svec/math/: color.h  geometry.h  scalar.h  vec2.h  vec3.h  vec4.h
include/svec/meshopt/: mesh_optimization.h
include/svec/pyramid/: error_pyramid.h
include/svec/refine/: adaptive_refinement.h  edge_aware_refinement.h  pyramid_refinement.h
include/svec/render/: reference_renderer.h  surface_plane_renderer.h  triangle_raster_common.h
include/svec/surface/: mesh.h  mesh_builders.h  mesh_topology.h  triangle_plane.h
src/edge/: edge_map.cpp
src/error/: error_estimator.cpp  hierarchical_surface_error.cpp
src/image/: image_io_stb.cpp  integral_map.cpp  oklab_convert.cpp  scanline_integral_stats.cpp
src/meshopt/: mesh_optimization.cpp
src/pyramid/: error_pyramid.cpp
src/refine/: adaptive_refinement.cpp  edge_aware_refinement.cpp  pyramid_refinement.cpp
src/render/: reference_renderer.cpp  surface_plane_renderer.cpp
src/surface/: mesh.cpp  mesh_builders.cpp  mesh_topology.cpp  triangle_plane.cpp
tests/: fast_refine_smoke.cpp  step2_smoke.cpp  step3_smoke.cpp  step4_smoke.cpp  step5_smoke.cpp  step6_smoke.cpp  step7_smoke.cpp  step8_smoke.cpp
